--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <input type="text" id="inp" oninput="inputChanged()" />
         <input type="submit">
     </form>
+    <button onClick="inputCleared()">Clear List</button>
+    <button onClick="reverse()">Reverse List</button>
     <ul id="items"></ul>
     <script src="app.js"></script>
 </body>
